--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post probando </h1>
-    <p>Y este es el parrafo de inicio</p>
-    
+    <div id="container">
+            <div id="post">
+                <h1>
+                    Este el titulo atractivo e interesante del post
+                </h1> 
+                <p>
+                    Y este el parrafo de inicio
+                </p>
+
+            </div>
+
+
+    </div>
+      
 </body>
 </html>
