Hice muchos cambios al Css y html HyperMederock

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyper Mederock
+                <span id="tagline">Tu super mega blog</span>
             </div>
             <div id="post">
                 <h1>
