Agregado el contenido al nuevo al blog, y una tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <p>
                     Y este el parrafo de inicio
                 </p>
+            <p>Solo parrafos loks, acá ando aprendeiendo a usar html de nuevo. Vamos para adelante</p>
 
             </div>
 
