--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
             <div id="cabecera">
-                Hyper Mederock
+                Hyper Mederock 2.0
                 <span id="tagline">Tu super mega blog</span>
             </div>
             <div id="post">
