--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
             <div id="cabecera">
                 Hyper Mederock 2.0
-                <span id="tagline">Tu super mega blog</span>
+                <span id="tagline">Tu super mega blog con cambios</span>
             </div>
             <div id="post">
                 <h1>
