Cambios en parrafos y css

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,17 +10,24 @@
 <body>
     <div id="container">
             <div id="cabecera">
-                Hyper Mederock 2.0
+                Hyper Mederock 3.0
                 <span id="tagline">Tu super mega blog con cambios</span>
             </div>
+           
+            
             <div id="post">
                 <h1>
-                    Este el titulo atractivo e interesante del post
+                    Titulo del documento
                 </h1> 
+
+               <h2>
+
+                holis
+               </h2> 
                 <p>
-                    Y este el parrafo de inicio
+                    texto de introducción del documento
                 </p>
-            <p>Solo parrafos loks, acá ando aprendeiendo a usar html de nuevo. Vamos para adelante</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
 
             </div>
 
